--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "dependencies": {
     "react": "^16.0.0"
   },
+  "keywords":[
+      "selective",
+      "Component",
+      "React",
+      "reactjs",
+      "selector",
+      "selective rendering"
+  ],
+  "repository":{
+     "type":"git",
+      "url":"https://github.com/Anwesh43/react-selective-component"
+  },
   "devDependencies": {},
   "description": ""
 }
