--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-selective-component",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "react": "^16.0.0"
   },
   "keywords":[
