--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-selective-component",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,7 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "react": "^16.0.0"
+    "react": "^15.x"
   },
   "keywords":[
       "selective",
