--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-selective-component",
-  "version": "1.10.0",
+  "version": "1.13.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,20 +8,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "react": "^15.x"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "react": "^15.6.1"
   },
-  "keywords":[
-      "selective",
-      "Component",
-      "React",
-      "reactjs",
-      "selector",
-      "selective rendering"
+  "keywords": [
+    "selective",
+    "Component",
+    "React",
+    "reactjs",
+    "selector",
+    "selective rendering"
   ],
-  "repository":{
-     "type":"git",
-      "url":"https://github.com/Anwesh43/react-selective-component"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Anwesh43/react-selective-component"
   },
-  "devDependencies": {},
   "description": ""
 }
